--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,11 @@
       rel="stylesheet"
       href="https://unpkg.com/react-custom-scroll@4.2.1/dist/customScroll.css"
     />
-    <script src="https://unpkg.com/react-custom-scroll@4.2.1/dist/reactCustomScroll.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
+    <!-- <script src="https://unpkg.com/react-custom-scroll@4.2.1/dist/reactCustomScroll.js"></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
